# terra-cosmwasm

./: Cargo.toml  README.md
artifacts/: bindings_tester.wasm  checksums.txt  checksums_intermediate.txt
contracts/tester/: Cargo.toml  README.md
contracts/tester/examples/: schema.rs
contracts/tester/schema/: execute_msg.json  handle_msg.json  query_msg.json
contracts/tester/src/: contract.rs  msg.rs
examples/: schema.rs
schema/: swap_response.json  tax_cap_response.json  tax_rate_response.json  terra_msg_wrapper.json  terra_query.json  terra_query_wrapper.json
src/: lib.rs  msg.rs  querier.rs  query.rs
