[package]
name = "bindings-tester"
version = "1.3.0"
authors = ["Yun Yeo <YunSuk-Yeo@users.noreply.github.com>"]
edition = "2018"
description = "simple tester for terra-cosmwasm-bindings"
license = "Apache-2.0"
repository = "https://github.com/terra-project/terra-cosmwasm-bindings"
homepage = "https://terra.money"
documentation = "https://docs.terra.money"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
terra-cosmwasm = { path = "../../packages/terra-cosmwasm" }
cosmwasm-std = { version = "0.13.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.13.0", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "0.13.0", default-features = false }
cosmwasm-schema = { version = "0.13.0" }
