[package]
name = "bindings-tester"
version = "0.0.0"
authors = ["Yun Yeo <YunSuk-Yeo@users.noreply.github.com>"]
edition = "2018"
description = "simple tester for terra-cosmwasm-bindings"
license = "Apache-2.0"
repository = "https://github.com/terra-project/terra-cosmwasm-bindings"
homepage = "https://terra.money"
documentation = "https://docs.terra.money"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
terra-cosmwasm = { path = "../../packages/terra-cosmwasm", version = "2.0.0-alpha3" }
cosmwasm-std = { version = "0.14.0-beta2", features = ["iterator"] }
cosmwasm-storage = { version = "0.14.0-beta2", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
thiserror = "1.0"

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "0.14.0-beta2" }
